--- a/vue-resource.html
+++ b/vue-resource.html
@@ -21,7 +21,7 @@
    <ul>
       <li v-for="list in lists">{{list.listName}}</li>
     </ul>
-</template>
+  </template>
 
   <script src=" https://cdn.bootcss.com/vue/2.3.4/vue.js "></script>
   <script src="https://cdn.bootcss.com/vue-resource/1.3.4/vue-resource.js"></script>
@@ -51,6 +51,6 @@
     });
   </script>
 
-  </ata>
+</body>
 
 </html>
